--- a/html/wawa.html
+++ b/html/wawa.html
@@ -96,7 +96,7 @@
                     'left': sw
                 });
             }
-            LGlobal.setDebug(true);
+            //LGlobal.setDebug(true);
             //LGlobal.box2d = new LBox2d(gravity);
             LGlobal.preventDefault = false; //滚屏事件 true禁止滚平 flase滚屏
             LMouseEventContainer.set(LMouseEvent.MOUSE_DOWN, false);
