--- a/html/wawa.html
+++ b/html/wawa.html
@@ -16,13 +16,13 @@
 </head>
 
 <body>
-    <div class="logocon">
+    <!-- <div class="logocon">
         <div class="logoimg"><img src="../Public/wawa/images/logo.png" height="40px"></div>
         <div class="cont">
             <p>O2O客戶服務平台（EC2）</p>
             <p>請關注粉絲專頁 <a href="javascript">福皓整合科技</a></p>
         </div>
-    </div>
+    </div> -->
     <!-- <div class="sharecon">
         <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2FFull2house%2F&width=50&layout=box_count&action=like&size=large&show_faces=false&share=false&height=65&appId=382298112140973" width="50" height="65" style="border:none;overflow:hidden"
             scrolling="no" frameborder="0" allowTransparency="true"></iframe>
